recursion.lessons.recursion.tree.Tree.scala.error
Tree:3: error: not found: value subTree
subTree(steps, length,angle,shrink)
^